refactor: country_handler's swagger comments
